# soundboard

./: .gitignore  .npmrc  .prettierignore  .prettierrc.cjs  .versionrc  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE  README.md  RELEASE.md  SECURITY.md  build.mjs  icon.icns  index.html  main.ts  package-lock.json  package.json  pnpm-lock.yaml  react-shim.mjs  styles.css  tsconfig.json  tsconfig.preload.json
.github/workflows/: build.yml
sound/: 10diem.opus  30-min.opus  ae-den.opus  aidanhtaodi.opus  aothatday.opus  applause-cheer.opus  applause-whistle.opus  auxima.opus  bannho.opus  banoi.opus  bay-oi.opus  bomcha.opus  bruh.opus  burstlaugh.opus  cai-gi-do-ba-noi.opus  caiqq.opus  camgiaclucay.opus  camonanh.opus  cauca.opus  chayeuem.opus  chetmeroi.opus  chi-lay-em.opus  chinese-laugh.opus  choc-que.opus  choitoi.opus  chungtakogiong.opus  cohai.opus  colen.opus  concainit.opus  cuoi-ba-dao.opus  cuoi-faptv.opus  cuoi.opus  cuoiembe.opus  cuoinhe.opus  da-lam-gi-dau.opus  dam.opus  danhlon.opus  danhlonko.opus  dau.opus  day-toi-biet-ngay.opus  (+127 more)
src/: audio-pool.ts  hotkeys.ts  preload.ts  settings.ts  sound.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/src/: main.rs
src/app/: app.tsx  index.tsx
src/constants/: settings.ts  themes.ts
src/context/: audio.tsx  audiocontext.tsx  setting.tsx  settingcontext.tsx  sounds.tsx
src/data/: audio.ts  music.ts  themes.ts
src/hooks/: useUserSounds.ts  usehotkey.ts
src/styles/: tailwind.css
src/types/: electron-store.d.ts  fluent-ffmpeg.d.ts  index.ts
(+55 files in other folders)
